# pop-de

./: LICENSE  README.md  pyproject.toml
popde/: adaptive_bw_kde.py  adaptive_kde.py  awkdepy.py  density_estimate.py  transform_utils.py  utils_plot.py
popde/tests/: test_kde.py  test_plot.py
python/: NOTES
