[build-system]
requires = [
    "oldest-supported-numpy",
    "setuptools>=42",
    "wheel",
    "build",
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['popde']

[project]
name = "pop-de"
version = "0.1.0"
authors = [
  {name = "Thomas Dent", email = "thomas.dent@usc.es"},
  {name = "Jam Sadiq", email = "jamlucky.qau@gmail.com"},
]
description = "Population analysis"
keywords = ['gravitational waves', 'density estimation', 'statistical methods', 'population', 'inference', 'compact binary mergers']
readme = "README.md"
requires-python = ">=3.9.18"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy >= 1.26.4",
    "scipy >= 1.13.1",
    "matplotlib >= 3.9.0",
    "KDEpy",
    ]

[project.urls]
Repository = "https://github.com/tdent/pop-de.git"
Issues = "https://github.com/tdent/pop-de/issues/"
